# sketches

./: .gitignore  Cargo.toml  README.md  TODO.org  index.html  lisp.py  main.go  mix.exs  package.json  repl.py  server.js  timetravel.py  webpack.config.js
common/: config.go
config/: config.exs
daemon/: backlog.go  daemon.go  irc_connection.go
frontend/: README.md  package.json  webpack.config.js
frontend/src/: App.vue  main.js
lib/: layabout.ex
lib/layabout/: router.ex  slack.ex  store.ex
profiles/: antipopularity.mint  cxb.mint
projects/700c/: .gitignore  app.py  requirements.txt
projects/allhands/: .gitignore
projects/birch/: Cargo.toml  README.md
projects/blick/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
projects/brotform/: .gitignore  index.html
projects/chores/: .gitignore  chores.py  schema.sql
projects/creases/: .babelrc  README.md  index.html  package-lock.json  package.json
projects/diylingo/: .gitignore  README.md  pyproject.toml
projects/diylingo/diylingo/: __init__.py
projects/dmv/: scraper.py
projects/dots/: pyproject.toml
projects/dots/config/: settings.py
projects/dots/dots/: apps.py
projects/dredge/: Cargo.toml
projects/dwds-ext/: manifest.json  package-lock.json  package.json  popup.html
projects/fnr/: Cargo.toml  README.md
projects/fnr/src/: main.rs
projects/fnr/tests/: cli.rs
projects/gear-ratio/: .gitignore  package-lock.json  package.json  webpack.config.js
projects/git-commitment/: .gitignore  README.md  go.mod  main.go
projects/git-timewarp/: .gitignore  README.md  lisp.py  repl.py  setup.py
projects/gruppo/: .gitignore  README.md  go.mod  go.sum  main.go
projects/hem/: README.md  main.go
projects/jot/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
projects/layabout/: README.md  mix.exs
projects/lunk/: .gitignore  README.md  go.mod  go.sum  main.go
projects/mapsnap/: package-lock.json  package.json
projects/oop/: README.md  go.mod  main.go
projects/panamint/: README.md
projects/pontoon/: README.md  mix.exs
projects/postdoc/: .gitignore  go.mod  main.go
projects/price-tracker/: README.md  background.js  content.js  manifest.json  parser-common.js  popup.html  popup.js  tracked-items.html  tracked-items.js
projects/pronk/: README.md  mix.exs
projects/random-walk/: .project  Makefile  manifest.xml  properties.mk
projects/recipebin/: .gitignore  README.md  go.mod  go.sum  main.go
projects/recipebin-py/: .gitignore  SPEC.md  pyproject.toml
projects/recipebin-py/recipebin/: extractor.py  web.py
projects/ridge/: go.mod  main.go
projects/route-loader/: .gitignore
projects/snailmail/: pyproject.toml
projects/sorelegs/: .dockerignore  .gitignore  Dockerfile  bot.py  entrypoint.sh  fly.toml  pyproject.toml
projects/sorelegs/templates/: index.html
projects/standup/: .gitignore  README.md  mix.exs
projects/strava-gear-tagger/: .gitignore  README.md  package-lock.json  (+3 more)
projects/tofu/: Cargo.toml
projects/tofu/src/: main.rs
projects/tofu/static/: 404.html  base.css  crypto.js  index.html  view.html
src/: broker.rs  geo.rs  graph.rs  index.html  index.rs  lib.rs  main.rs  profile.pest  profile.rs  raster.rs  tags.rs  task.rs
test/: layabout_test.exs
web/: index.html
(+530 files in other folders)
