[package]
name = "panamint"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "*"
lazy_static = "1.4.0"
osmpbfreader = "0.15.2"
pest = "*"
pest_derive = "*"
petgraph = "0.6.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rstar = "0.9.3"
smartstring = "1.0.1"

[profile.release]
debug = true
