[tool.poetry]
name = "diylingo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0+"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
